try to create li element with js

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
 <body>
 
-    <ul id="list">
+    <div class="container">
+        <ul id="list">
 
-    </ul>
+        </ul>
+    </div>
 
 </body>
 
